add a new js file

--- a/T1.html
+++ b/T1.html
@@ -7,12 +7,14 @@
 
 </head>
 <body>
-    <h1 onclick="alert('hello!!')">welcome to js</h1>
-<button onclick="somefunc()"> home</button>
+ 
+    <button onclick="sayhello()"> home</button>
 
 
-    <script src="t4.js">
-        
+    <script src="t7.js">
+function sayhello(){
+    alert('hello user');
+}
     </script>
 </body>
 </html>
